# transcriber

./: .gitignore  README.md  audio_player.py  audio_util.py  main.py  main2.py  pyproject.toml  requirements.txt  speaker-diarization.py
src/: app.py  audio_util.py  db.py  settings.py  speaker_diarization.py  transcribe.py  youtube_util.py
src/templates/: index.html
