[project]
name = "transcriber"
version = "1.1.0"
requires-python = ">= 3.12"
dependencies = [
    "openai-whisper",
    "sounddevice",
    "soundfile",
    "pydub",
    "librosa",
    "yt-dlp",
    "Flask",
    "pymongo",
] # ubuntu may require libportaudio2 (sudo apt-get install libportaudio2)

[project.optional-dependencies]
diarization = ["pyannote.audio"]
